# advent-of-code-2023

./: .gitignore
aoc01/haskell/: haskell.cabal
aoc01/haskell/app/: Main.hs
aoc01/laszlo/: part01.las  part02.las
aoc02/haskell/app/: Main.hs
aoc02/laszlo/: part01.las  part02.las
aoc03/laszlo/: part01.las  part02.las
aoc04/haskell/part01/app/: Main.hs
aoc04/haskell/part02/: haskell.cabal
aoc04/haskell/part02/app/: Main.hs
aoc05/haskell/part01/app/: Main.hs
aoc05/haskell/part02/app/: Main.hs
aoc06/haskell/part01/app/: Main.hs
aoc06/haskell/part02/app/: Main.hs
aoc07/haskell/part01/app/: Main.hs
aoc07/haskell/part02/: haskell.cabal
aoc07/haskell/part02/app/: Main.hs
aoc08/haskell/part01/: haskell.cabal
aoc08/haskell/part01/app/: Main.hs
aoc08/haskell/part02/app/: Main.hs
aoc09/haskell/part01/app/: Main.hs
aoc09/laszlo/: aoc09.las
aoc10/haskell/part01/app/: Main.hs
aoc10/haskell/part02/app/: Main.hs
aoc11/python/part01/: main.py
aoc11/python/part02/: main.py
aoc12/part01/: main.py
aoc12/part02/: main.py
aoc13/part01/: main.py
aoc13/part02/: main.py
aoc14/part01/: main.py
aoc14/part02/: main.py
aoc15/: main.py
aoc16/part01/: main.py
aoc16/part02/: main.py
aoc17/part01/: main.py
aoc17/part02/: main.py
aoc18/part01/: main.py
aoc18/part02/: main.py
aoc19/part01/: main.py
aoc19/part02/: main.py
aoc20/part01/: main.py
aoc20/part02/: main.py  spreadsheet.xlsx
aoc21/part01/: main.py
aoc22/part01/: main.py
aoc22/part02/: main.py
aoc24/part01/: main.c
aoc24/part02/: main.c
(+2 files in other folders)
