cabal-version:      2.4
name:               haskell
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Michael Gerhold
maintainer:         michael.gerhold@web.de

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable haskell
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.17.2.0,
        split >= 0.2.4,
        containers >= 0.6.7,

    hs-source-dirs:   app
    default-language: Haskell2010
